demo_petstore-ee7/default-myproject/myproject/deploy/yamls/petstoreee7-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: petstoreee7
  name: petstoreee7
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: petstoreee7
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: petstoreee7
      name: petstoreee7
    spec:
      containers:
        - image: index.docker.io/joseporres/petstoreee7:latest
          imagePullPolicy: Always
          name: petstoreee7
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
