demo_petstore-ee7/default-myproject/myproject/deploy/yamls/sponsor-postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: sponsor-postgresql
  name: sponsor-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: sponsor-postgresql
  serviceName: sponsor-postgresql
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: sponsor-postgresql
      name: sponsor-postgresql
    spec:
      containers:
        - image: postgres:9.6.5
          imagePullPolicy: Always
          name: sponsor-postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
      restartPolicy: Always
      securityContext: {}
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
